5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1834_1278.log
== TEST (2019-06-30 14:48:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
if(d or s >=0):
	i=(d//111) -1
	j=(s//111) -1
	x=matris[i,j]
else:
	print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 14:49:01) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
if(d or s >=0):
	i=(d//111) -1
	j=(s//111) -1
	x=matris[i,j]
else:
	print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 14:51:03) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
for i in range(syze(matris))
	if(d or s >=0):
		i=(d//111) -1
		j=(s//111) -1
		x=matris[i,j]
	else:
		print(x)

-- ERROR:
File "XXXX", line 14
    for i in range(syze(matris))
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 14:51:08) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
for i in range(syze(matris)):
	if(d or s >=0):
		i=(d//111) -1
		j=(s//111) -1
		x=matris[i,j]
	else:
		print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 14:51:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
for i in range(matris):
	if(d or s >=0):
		i=(d//111) -1
		j=(s//111) -1
		x=matris[i,j]
	else:
		print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 14:51:40) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
for i in range(size(matris)):
	if(d or s >=0):
		i=(d//111) -1
		j=(s//111) -1
		x=matris[i,j]
	else:
		print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:44:37) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
i=(d//111) -1
j=(s//111) -1

while(d!=-1):
	
	i=(d//111) -1
	j=(s//111) -1
	f=sum(matris[i,j])
	d=int(input(""))
	s=int(input(""))



print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:46:35) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
i=(d//111) -1
j=(s//111) -1

while(d!=-1):
	
	i=(d//111) -1
	j=(s//111) -1
	w=sum(matris[i,j])
	d=int(input(""))
	s=int(input(""))
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:47:06) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))

while(d!=-1):
	
	i=(d//111) -1
	j=(s//111) -1
	w=sum(matris[i,j])
	d=int(input(""))
	s=int(input(""))
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:48:01) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))

while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	x=matris[i,j]
	d=int(input(""))
	s=int(input(""))
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:48:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))

while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	x=x+matris[i,j]
	d=int(input(""))
	s=int(input(""))
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:48:20) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
x=0
while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	x=x+matris[i,j]
	d=int(input(""))
	s=int(input(""))
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:48:35) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
x=0
while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	x=x+matris[i,j]
	d=int(input(""))
	s=int(input(""))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:48:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
x=0
while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	x=x+matris[i,j]
	d=int(input(""))
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:49:17) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
x=0
while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	x=x+matris[i,j]
	d=int(input(""))
	
print(x)
-- EXECUTION TIME:
1.06542
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
28
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
56
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
34
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:51:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
x=0
while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	x=sum(matris[i,j])
	d=int(input(""))
	
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:51:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
x=0
while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	x=sum(matris[i,j])
	d=int(input(""))
	s=int(input(""))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:51:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
x=0
while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	x=sum(matris[i,j])
	d=int(input(""))
	s=int(input(""))
print(x)
-- EXECUTION TIME:
1.06339
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 20, in <module>
    s=int(input(""))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:53:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
x=0
while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	x=matris[i,j]
	d=int(input(""))
	s=int(input(""))
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:54:14) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
x=0
while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	x=matris[i,j]
	d=int(input(""))
	
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:54:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
x=0
while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	x=matris[i,j]

	
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:56:21) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
x=0
p=0
while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	x=matris[i,j]
	p=p+x
	d=int(input(""))
	s=int(input(""))
	print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:56:39) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
x=0
p=0
while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	x=matris[i,j]
	p=p+x
	d=int(input(""))
	
	print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:56:59) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
x=0
p=0
while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	x=matris[i,j]
	p=p+x
	d=int(input(""))
	
	print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:57:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
x=0
p=0
while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	x=matris[i,j]
	p=p+x
	d=int(input(""))
	
	print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:57:54) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
x=0
p=0
while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	x=matris[i,j]
	p=p+x
	d=int(input(""))
	
	print(p)
-- EXECUTION TIME:
1.10594
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
8
13
28
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
15
28
41
55
56
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
2
4
11
13
17
19
34
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:15:19) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
x=0
p=0
while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	x=sum(i,j)
	
	d=int(input(""))
	
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:17:27) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
x=0
while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	x=x+matris[i,j]
	d=int(input(""))
	
	print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:17:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
x=0
while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	x=x+matris[i,j]
	d=int(input(""))
	
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:19:06) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
x=0
while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	x=x+matris[i,j]
	d=int(input(""))
	
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:19:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
x=0
while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	x=x+matris[i,j]
	d=int(input(""))
	
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:19:59) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
x=0
while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	x=x+matris[i,j]
	d=int(input(""))
	
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:20:14) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
x=0
while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	x=x+matris[i,j]
	d=int(input(""))
	
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:20:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
x=0
while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	x=x+matris[i,j]
	s=int(input(""))
	
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:20:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
x=0
while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	x=x+matris[i,j]
	s=int(input(""))
	
	print(x)
-- EXECUTION TIME:
0.899021
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1278/main.py", line 19, in <module>
    s=int(input(""))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:20:47) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
x=0
while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	x=x+matris[i,j]
	s=int(input(""))
	d=int(input)
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:20:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
x=0
while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	x=x+matris[i,j]
	s=int(input(""))
	d=int(input(""))
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:21:28) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
x=0
while(d!=-1 and s!=-1):
	i=(d//111) -1
	j=(s//111) -1
	x=x+matris[i,j]
	d=int(input(""))
	s=int(input(""))
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:23:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
x=0
i=(d//111) -1
j=(s//111) -1
while(d!=-1):
	b=matris[i,j]
	x=x+b
	d=int(input(""))
	
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:24:10) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
x=0

while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	b=matris[i,j]
	x=x+b
	d=int(input(""))
	
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:25:19) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))

x=0

while(s!=-1):
	i=(d//111) -1
	j=(s//111) -1
	b=matris[i,j]
	x=x+b
	s=int(input(""))
	
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:25:28) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))

x=0

while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	b=matris[i,j]
	x=x+b
	d=int(input(""))
	
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:25:39) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))

x=0

while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	b=matris[i,j]
	x=x+b
	d=int(input(""))
	s=int(input(""))
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:55:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))

x=d

while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	b=matris[i,j]
	x=x+b
	d=int(input(""))
	s=int(input(""))
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:56:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
i=(d//111) -1
x=i

while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	b=matris[i,j]
	x=x+b
	d=int(input(""))
	
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:56:51) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
i=(d//111) -1
j=(s//111) -1
x=j

while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	b=matris[i,j]
	x=x+b
	d=int(input(""))
	
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:03:20) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
i=(d//111) -1
j=(s//111) -1
x=j

while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	b=matris[i]
	s=matris[j]
	x=b+a
	d=int(input(""))
	
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:03:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
i=(d//111) -1
j=(s//111) -1
x=0

while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	b=matris[i]
	s=matris[j]
	x=b+a
	d=int(input(""))
	
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:03:30) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
i=(d//111) -1
j=(s//111) -1
x=0

while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	b=matris[i]
	s=matris[j]
	x=b+s
	d=int(input(""))
	
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:03:51) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
i=(d//111) -1
j=(s//111) -1
x=0

while(d!=-1):
	i=(d//111) -1
	j=(s//111) -1
	b=matris[i]
	s=matris[j]
	x=sum(b+s)
	d=int(input(""))
	
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:04:54) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
i=(d//111) -1
j=(s//111) -1
x=0

while(d!=-1):
	b=matris[i,j]
	x=
	d=int(input(""))
	i=(d//111) -1
	j=(s//111) -1
	print(x)
-- ERROR:
File "XXXX", line 20
    x=
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:05:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
i=(d//111) -1
j=(s//111) -1
x=0

while(d!=-1):
	b=matris[i,j]
	x=x+b
	d=int(input(""))
	i=(d//111) -1
	j=(s//111) -1
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:05:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
i=(d//111) -1
j=(s//111) -1
x=s

while(d!=-1):
	b=matris[i,j]
	x=x+b
	d=int(input(""))
	i=(d//111) -1
	j=(s//111) -1
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:05:36) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
i=(d//111) -1
j=(s//111) -1
x=j

while(d!=-1):
	b=matris[i,j]
	x=x+b
	d=int(input(""))
	i=(d//111) -1
	j=(s//111) -1
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:05:45) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
i=(d//111) -1
j=(s//111) -1
x=i

while(d!=-1):
	b=matris[i,j]
	x=x+b
	d=int(input(""))
	i=(d//111) -1
	j=(s//111) -1
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:06:03) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
i=(d//111) -1
j=(s//111) -1
x=i

while(d!=-1):
	b=matris[i,j]
	x=x+b
	d=int(input(""))
	i=(d//111) -1
	j=(s//111) -1
	print(x)
-- EXECUTION TIME:
1.00053
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
10
15
30
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
16
29
42
56
57
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
2
4
11
13
17
19
34
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:06:52) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
i=(d//111) -1
j=(s//111) -1
x=i

while(d!=-1):
	b=matris[i,j]
	x=x+b
	d=int(input(""))
	s=int(input(""))
	i=(d//111) -1
	j=(s//111) -1
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:07:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
i=(d//111) -1
j=(s//111) -1
x=0

while(d!=-1):
	b=matris[i,j]
	x=x+b
	d=int(input(""))
	s=int(input(""))
	i=(d//111) -1
	j=(s//111) -1
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:07:15) 
-- CODE:
from numpy import*
from numpy.linalg import*

matris=array([[0,2,11,6,15,11,1]
				  ,[2,0,7,12,4,2,15]
				  ,[11,7,0,11,8,3,13]
				  ,[6,12,11,0,10,2,1]
				  ,[15,4,8,10,0,5,13]
				  ,[11,2,3,2,5,0,14]
				  ,[1,15,13,1,13,14,0]])

d=int(input(""))
s=int(input(""))
i=(d//111) -1
j=(s//111) -1
x=0

while(d!=-1):
	b=matris[i,j]
	x=x+b
	d=int(input(""))
	s=int(input(""))
	i=(d//111) -1
	j=(s//111) -1
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
